--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.9.2",
+    "react-big-calendar": "^1.18.0",
     "react-native": "^0.79.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
@@ -42,7 +42,7 @@
     ]
   },
   "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
