--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/app": "^7.0.1",
+    "@capacitor/core": "^7.2.0",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/react": "^6.1.17",
+    "@ionic/react": "^6.7.5",
+    "@ionic/react-router": "^5.2.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.2",
+    "history": "^5.3.0",
     "react-big-calendar": "^1.18.0",
     "react-native": "^0.79.1",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -21,6 +32,7 @@
     "sync": "aws s3 sync ./build s3://idlesundays.com/",
     "invalidate": "aws cloudfront create-invalidation --distribution-id E3I0XZQFYFEILP --paths /*",
     "test": "react-scripts test",
+    "clean": "npm cache clean --force",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
