--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/react": "^6.1.17",
-    "@ionic/react": "^8.5.5",
-    "@ionic/react-router": "^8.5.5",
+    "@ionic/react": "^6.7.5",
+    "@ionic/react-router": "^6.7.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -21,8 +21,9 @@
     "framer-motion": "^12.9.2",
     "history": "^5.3.0",
     "react-big-calendar": "^1.18.0",
+    "react-calendar": "^5.1.0",
     "react-native": "^0.79.1",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
